k8s-specifications-dev/worker-network-policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-worker
spec:
  podSelector:
    matchLabels:
      app: worker
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: dev
